# api_tutorial

./: .dockerignore  .env  Dockerfile  docker-compose.yml  pyproject.toml
data/: data.db
src/: main.py  settings.py
src/api/: main.py  models.py  services.py
src/data/: models.py  session.py
src/processing/: clean.py  genius.py  process.py
src/utils/: helpers.py
